add schemas feature to hateoas
